# openproprc

./: README.md  createMotorSurrogateModels.py  motorModelOpenmdog.py  pyproject.toml  thrustCurve.py
openproprc/: __init__.py
